--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -243,6 +243,8 @@ FONT_FAMILY_NAME = 'Briem Hand Test v19 SemiBold' / SUBFAMILY_NAME = 'Regular'</
 
 - uni01E5.001
 
+- uni025F.dotless
+
 - uni0280.001
 
 - uni03080300.case
@@ -305,6 +307,8 @@ FONT_FAMILY_NAME = 'Briem Hand Test v19 SemiBold' / SUBFAMILY_NAME = 'Regular'</
 - uni01B7.localGAD
 
 - uni01E5.001
+
+- uni025F.dotless
 
 - uni0280.001
 
@@ -369,6 +373,8 @@ FONT_FAMILY_NAME = 'Briem Hand Test v19 SemiBold' / SUBFAMILY_NAME = 'Regular'</
 
 - uni01E5.001
 
+- uni025F.dotless
+
 - uni0280.001
 
 - uni03080300.case
@@ -431,6 +437,8 @@ FONT_FAMILY_NAME = 'Briem Hand Test v19 SemiBold' / SUBFAMILY_NAME = 'Regular'</
 - uni01B7.localGAD
 
 - uni01E5.001
+
+- uni025F.dotless
 
 - uni0280.001
 
@@ -495,6 +503,8 @@ FONT_FAMILY_NAME = 'Briem Hand Test v19 SemiBold' / SUBFAMILY_NAME = 'Regular'</
 
 - uni01E5.001
 
+- uni025F.dotless
+
 - uni0280.001
 
 - uni03080300.case
@@ -557,6 +567,8 @@ FONT_FAMILY_NAME = 'Briem Hand Test v19 SemiBold' / SUBFAMILY_NAME = 'Regular'</
 - uni01B7.localGAD
 
 - uni01E5.001
+
+- uni025F.dotless
 
 - uni0280.001
 
@@ -621,6 +633,8 @@ FONT_FAMILY_NAME = 'Briem Hand Test v19 SemiBold' / SUBFAMILY_NAME = 'Regular'</
 
 - uni01E5.001
 
+- uni025F.dotless
+
 - uni0280.001
 
 - uni03080300.case
@@ -683,6 +697,8 @@ FONT_FAMILY_NAME = 'Briem Hand Test v19 SemiBold' / SUBFAMILY_NAME = 'Regular'</
 - uni01B7.localGAD
 
 - uni01E5.001
+
+- uni025F.dotless
 
 - uni0280.001
 
@@ -2197,28 +2213,28 @@ FONT_FAMILY_NAME = 'Briem Hand Test v19 SemiBold' / SUBFAMILY_NAME = 'Regular'</
 <h3>Ensure soft_dotted characters lose their dot when combined with marks that replace the dot.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/soft_dotted&gt;</div>
 
-<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ į̀ į́ į̂ į̃ į̄ į̌ ɨ̀ ɨ́ ɨ̂ ɨ̃ ɨ̄ ɨ̈ ɨ̋ ɨ̌ ɨ̏ ɨ̧̀ ɨ̧́ ɨ̧̂ ɨ̧̌ ɨ̱̀ ɨ̱́ ɨ̱̈ і́ ị̀ ị́ ị̂ ị̃ ị̄</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
 <p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Light.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ į̀ į́ į̂ į̃ į̄ į̌ ɨ̀ ɨ́ ɨ̂ ɨ̃ ɨ̄ ɨ̈ ɨ̋ ɨ̌ ɨ̏ ɨ̧̀ ɨ̧́ ɨ̧̂ ɨ̧̌ ɨ̱̀ ɨ̱́ ɨ̱̈ і́ ị̀ ị́ ị̂ ị̃ ị̄</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Light.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
 <p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Medium.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ į̀ į́ į̂ į̃ į̄ į̌ ɨ̀ ɨ́ ɨ̂ ɨ̃ ɨ̄ ɨ̈ ɨ̋ ɨ̌ ɨ̏ ɨ̧̀ ɨ̧́ ɨ̧̂ ɨ̧̌ ɨ̱̀ ɨ̱́ ɨ̱̈ і́ ị̀ ị́ ị̂ ị̃ ị̄</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Medium.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
 <p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ į̀ į́ į̂ į̃ į̄ į̌ ɨ̀ ɨ́ ɨ̂ ɨ̃ ɨ̄ ɨ̈ ɨ̋ ɨ̌ ɨ̏ ɨ̧̀ ɨ̧́ ɨ̧̂ ɨ̧̌ ɨ̱̀ ɨ̱́ ɨ̱̈ і́ ị̀ ị́ ị̂ ị̃ ị̄</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
 <p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-ExtraLight.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ į̀ į́ į̂ į̃ į̄ į̌ ɨ̀ ɨ́ ɨ̂ ɨ̃ ɨ̄ ɨ̈ ɨ̋ ɨ̌ ɨ̏ ɨ̧̀ ɨ̧́ ɨ̧̂ ɨ̧̌ ɨ̱̀ ɨ̱́ ɨ̱̈ і́ ị̀ ị́ ị̂ ị̃ ị̄</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-ExtraLight.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
 <p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Bold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ į̀ į́ į̂ į̃ į̄ į̌ ɨ̀ ɨ́ ɨ̂ ɨ̃ ɨ̄ ɨ̈ ɨ̋ ɨ̌ ɨ̏ ɨ̧̀ ɨ̧́ ɨ̧̂ ɨ̧̌ ɨ̱̀ ɨ̱́ ɨ̱̈ і́ ị̀ ị́ ị̂ ị̃ ị̄</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Bold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
 <p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-SemiBold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ į̀ į́ į̂ į̃ į̄ į̌ ɨ̀ ɨ́ ɨ̂ ɨ̃ ɨ̄ ɨ̈ ɨ̋ ɨ̌ ɨ̏ ɨ̧̀ ɨ̧́ ɨ̧̂ ɨ̧̌ ɨ̱̀ ɨ̱́ ɨ̱̈ і́ ị̀ ị́ ị̂ ị̃ ị̄</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-SemiBold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
 <p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ į̀ į́ į̂ į̃ į̄ į̌ ɨ̀ ɨ́ ɨ̂ ɨ̃ ɨ̄ ɨ̈ ɨ̋ ɨ̌ ɨ̏ ɨ̧̀ ɨ̧́ ɨ̧̂ ɨ̧̌ ɨ̱̀ ɨ̱́ ɨ̱̈ і́ ị̀ ị́ ị̂ ị̃ ị̄</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHandTestv19-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
 <p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
 <h3>Check math signs have the same width.</h3>
@@ -2231,9 +2247,9 @@ plus</p>
 <p>Width = 560:
 equal</p>
 <p>Width = 570:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 550:
-logicalnot, multiply</p>
+multiply, logicalnot</p>
 <p>Width = 512:
 plusminus</p>
 <p>Width = 519:
@@ -2253,7 +2269,7 @@ plus</p>
 <p>Width = 552:
 equal</p>
 <p>Width = 537:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 499:
 logicalnot</p>
 <p>Width = 468:
@@ -2277,7 +2293,7 @@ plus</p>
 <p>Width = 554:
 equal</p>
 <p>Width = 547:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 514:
 logicalnot</p>
 <p>Width = 481:
@@ -2299,7 +2315,7 @@ The following math glyphs have a different width, though:</p>
 <p>Width = 540:
 less, lessequal</p>
 <p>Width = 530:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 489:
 logicalnot</p>
 <p>Width = 459:
@@ -2323,7 +2339,7 @@ plus</p>
 <p>Width = 551:
 equal</p>
 <p>Width = 533:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 494:
 logicalnot</p>
 <p>Width = 463:
@@ -2347,7 +2363,7 @@ plus</p>
 <p>Width = 558:
 equal</p>
 <p>Width = 562:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 538:
 logicalnot</p>
 <p>Width = 502:
@@ -2369,7 +2385,7 @@ plus</p>
 <p>Width = 556:
 equal</p>
 <p>Width = 555:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 526:
 logicalnot</p>
 <p>Width = 491:
@@ -2393,7 +2409,7 @@ plus</p>
 <p>Width = 553:
 equal</p>
 <p>Width = 542:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 507:
 logicalnot</p>
 <p>Width = 474:
