deploy: 11222e68eb1df67650a8974683a6a0d3c06ceccd

--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -217,10 +217,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - aogonek.latnNAV
 
-- aringacute.001
-
-- dcroat.001
-
 - eogonek.latnNAV
 
 - ij_acutecomb
@@ -241,8 +237,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - uni01B7.localGAD
 
-- uni01E5.001
-
 - uni025F.dotless
 
 - uni0280.001
@@ -258,14 +252,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 - uni0328.alt
 
 - uni1D1C.001
-
-- uni1E01.001
-
-- uni1E0B.001
-
-- uni1E15.001
-
-- uni1E17.001
 
 - x.p 
 
@@ -282,10 +268,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - aogonek.latnNAV
 
-- aringacute.001
-
-- dcroat.001
-
 - eogonek.latnNAV
 
 - ij_acutecomb
@@ -306,8 +288,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - uni01B7.localGAD
 
-- uni01E5.001
-
 - uni025F.dotless
 
 - uni0280.001
@@ -323,14 +303,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 - uni0328.alt
 
 - uni1D1C.001
-
-- uni1E01.001
-
-- uni1E0B.001
-
-- uni1E15.001
-
-- uni1E17.001
 
 - x.p 
 
@@ -347,10 +319,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - aogonek.latnNAV
 
-- aringacute.001
-
-- dcroat.001
-
 - eogonek.latnNAV
 
 - ij_acutecomb
@@ -371,8 +339,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - uni01B7.localGAD
 
-- uni01E5.001
-
 - uni025F.dotless
 
 - uni0280.001
@@ -388,14 +354,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 - uni0328.alt
 
 - uni1D1C.001
-
-- uni1E01.001
-
-- uni1E0B.001
-
-- uni1E15.001
-
-- uni1E17.001
 
 - x.p 
 
@@ -412,10 +370,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - aogonek.latnNAV
 
-- aringacute.001
-
-- dcroat.001
-
 - eogonek.latnNAV
 
 - ij_acutecomb
@@ -436,8 +390,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - uni01B7.localGAD
 
-- uni01E5.001
-
 - uni025F.dotless
 
 - uni0280.001
@@ -453,14 +405,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 - uni0328.alt
 
 - uni1D1C.001
-
-- uni1E01.001
-
-- uni1E0B.001
-
-- uni1E15.001
-
-- uni1E17.001
 
 - x.p 
 
@@ -477,10 +421,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - aogonek.latnNAV
 
-- aringacute.001
-
-- dcroat.001
-
 - eogonek.latnNAV
 
 - ij_acutecomb
@@ -501,8 +441,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - uni01B7.localGAD
 
-- uni01E5.001
-
 - uni025F.dotless
 
 - uni0280.001
@@ -518,14 +456,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 - uni0328.alt
 
 - uni1D1C.001
-
-- uni1E01.001
-
-- uni1E0B.001
-
-- uni1E15.001
-
-- uni1E17.001
 
 - x.p 
 
@@ -542,10 +472,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - aogonek.latnNAV
 
-- aringacute.001
-
-- dcroat.001
-
 - eogonek.latnNAV
 
 - ij_acutecomb
@@ -566,8 +492,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - uni01B7.localGAD
 
-- uni01E5.001
-
 - uni025F.dotless
 
 - uni0280.001
@@ -583,14 +507,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 - uni0328.alt
 
 - uni1D1C.001
-
-- uni1E01.001
-
-- uni1E0B.001
-
-- uni1E15.001
-
-- uni1E17.001
 
 - x.p 
 
@@ -607,10 +523,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - aogonek.latnNAV
 
-- aringacute.001
-
-- dcroat.001
-
 - eogonek.latnNAV
 
 - ij_acutecomb
@@ -631,8 +543,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - uni01B7.localGAD
 
-- uni01E5.001
-
 - uni025F.dotless
 
 - uni0280.001
@@ -648,14 +558,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 - uni0328.alt
 
 - uni1D1C.001
-
-- uni1E01.001
-
-- uni1E0B.001
-
-- uni1E15.001
-
-- uni1E17.001
 
 - x.p 
 
@@ -672,10 +574,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - aogonek.latnNAV
 
-- aringacute.001
-
-- dcroat.001
-
 - eogonek.latnNAV
 
 - ij_acutecomb
@@ -696,8 +594,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 
 - uni01B7.localGAD
 
-- uni01E5.001
-
 - uni025F.dotless
 
 - uni0280.001
@@ -713,14 +609,6 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 - uni0328.alt
 
 - uni1D1C.001
-
-- uni1E01.001
-
-- uni1E0B.001
-
-- uni1E15.001
-
-- uni1E17.001
 
 - x.p 
 
@@ -2235,7 +2123,7 @@ FONT_FAMILY_NAME = 'Briem Hand Test v21 ExtraLight' / SUBFAMILY_NAME = 'Regular'
 <details><summary>⚠️ <strong>fonts/ttf/BriemHandTestv21-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 550 among a set of 2 math glyphs.
 The following math glyphs have a different width, though:</p>
 <p>Width = 540:
-lessequal, less</p>
+less, lessequal</p>
 <p>Width = 530:
 greaterequal, greater</p>
 <p>Width = 489:
@@ -2309,7 +2197,7 @@ equal</p>
 <p>Width = 570:
 greaterequal, greater</p>
 <p>Width = 550:
-logicalnot, multiply</p>
+multiply, logicalnot</p>
 <p>Width = 512:
 plusminus</p>
 <p>Width = 519:
