deploy: fcc4e087e080d72b39b9a92fe11a164604a571e7

--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -603,6 +603,10 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>The following glyphs do not have the recommended number of contours:</p>
 <pre><code>- Glyph name: onehalf	Contours detected: 2	Expected: 3
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
 
 - Glyph name: uogonek	Contours detected: 2	Expected: 1
@@ -640,6 +644,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -701,6 +707,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 
 - Glyph name: arrowdown	Contours detected: 2	Expected: 1
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uhorn	Contours detected: 2	Expected: 1
 
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
@@ -712,6 +720,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: beta	Contours detected: 1	Expected: 2
 
 - Glyph name: fiveeighths	Contours detected: 4	Expected: 5
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
 
 - Glyph name: ohorn	Contours detected: 3	Expected: 2
 
@@ -744,6 +754,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -785,6 +797,10 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>The following glyphs do not have the recommended number of contours:</p>
 <pre><code>- Glyph name: onehalf	Contours detected: 2	Expected: 3
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
 
 - Glyph name: uogonek	Contours detected: 2	Expected: 1
@@ -828,6 +844,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -887,6 +905,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 
 - Glyph name: arrowdown	Contours detected: 2	Expected: 1
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uhorn	Contours detected: 2	Expected: 1
 
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
@@ -898,6 +918,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: beta	Contours detected: 1	Expected: 2
 
 - Glyph name: fiveeighths	Contours detected: 4	Expected: 5
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
 
 - Glyph name: ohorn	Contours detected: 3	Expected: 2
 
@@ -937,6 +959,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
 
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
+
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
 - Glyph name: uni1EDD	Contours detected: 4	Expected: 3
@@ -975,6 +999,10 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>The following glyphs do not have the recommended number of contours:</p>
 <pre><code>- Glyph name: onehalf	Contours detected: 2	Expected: 3
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
 
 - Glyph name: uogonek	Contours detected: 2	Expected: 1
@@ -1012,6 +1040,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -1073,6 +1103,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 
 - Glyph name: arrowdown	Contours detected: 2	Expected: 1
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uhorn	Contours detected: 2	Expected: 1
 
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
@@ -1084,6 +1116,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: beta	Contours detected: 1	Expected: 2
 
 - Glyph name: fiveeighths	Contours detected: 4	Expected: 5
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
 
 - Glyph name: ohorn	Contours detected: 3	Expected: 2
 
@@ -1116,6 +1150,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -1157,6 +1193,10 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>The following glyphs do not have the recommended number of contours:</p>
 <pre><code>- Glyph name: onehalf	Contours detected: 2	Expected: 3
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
 
 - Glyph name: uogonek	Contours detected: 2	Expected: 1
@@ -1194,6 +1234,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -1255,6 +1297,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 
 - Glyph name: arrowdown	Contours detected: 2	Expected: 1
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uhorn	Contours detected: 2	Expected: 1
 
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
@@ -1266,6 +1310,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: beta	Contours detected: 1	Expected: 2
 
 - Glyph name: fiveeighths	Contours detected: 4	Expected: 5
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
 
 - Glyph name: ohorn	Contours detected: 3	Expected: 2
 
@@ -1298,6 +1344,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -1339,6 +1387,10 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>The following glyphs do not have the recommended number of contours:</p>
 <pre><code>- Glyph name: onehalf	Contours detected: 2	Expected: 3
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
 
 - Glyph name: uogonek	Contours detected: 2	Expected: 1
@@ -1376,6 +1428,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -1435,6 +1489,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 
 - Glyph name: arrowdown	Contours detected: 2	Expected: 1
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uhorn	Contours detected: 2	Expected: 1
 
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
@@ -1446,6 +1502,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: beta	Contours detected: 1	Expected: 2
 
 - Glyph name: fiveeighths	Contours detected: 4	Expected: 5
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
 
 - Glyph name: ohorn	Contours detected: 3	Expected: 2
 
@@ -1478,6 +1536,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -1517,6 +1577,10 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>The following glyphs do not have the recommended number of contours:</p>
 <pre><code>- Glyph name: onehalf	Contours detected: 2	Expected: 3
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
 
 - Glyph name: uogonek	Contours detected: 2	Expected: 1
@@ -1554,6 +1618,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -1615,6 +1681,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 
 - Glyph name: arrowdown	Contours detected: 2	Expected: 1
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uhorn	Contours detected: 2	Expected: 1
 
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
@@ -1626,6 +1694,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: beta	Contours detected: 1	Expected: 2
 
 - Glyph name: fiveeighths	Contours detected: 4	Expected: 5
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
 
 - Glyph name: ohorn	Contours detected: 3	Expected: 2
 
@@ -1658,6 +1728,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -1699,6 +1771,10 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>The following glyphs do not have the recommended number of contours:</p>
 <pre><code>- Glyph name: onehalf	Contours detected: 2	Expected: 3
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
 
 - Glyph name: uogonek	Contours detected: 2	Expected: 1
@@ -1736,6 +1812,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -1797,6 +1875,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 
 - Glyph name: arrowdown	Contours detected: 2	Expected: 1
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uhorn	Contours detected: 2	Expected: 1
 
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
@@ -1808,6 +1888,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: beta	Contours detected: 1	Expected: 2
 
 - Glyph name: fiveeighths	Contours detected: 4	Expected: 5
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
 
 - Glyph name: ohorn	Contours detected: 3	Expected: 2
 
@@ -1840,6 +1922,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -1881,6 +1965,10 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>The following glyphs do not have the recommended number of contours:</p>
 <pre><code>- Glyph name: onehalf	Contours detected: 2	Expected: 3
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
 
 - Glyph name: uogonek	Contours detected: 2	Expected: 1
@@ -1920,6 +2008,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -1979,6 +2069,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 
 - Glyph name: arrowdown	Contours detected: 2	Expected: 1
 
+- Glyph name: Imacron	Contours detected: 1	Expected: 2
+
 - Glyph name: Uhorn	Contours detected: 2	Expected: 1
 
 - Glyph name: Uogonek	Contours detected: 2	Expected: 1
@@ -1990,6 +2082,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: beta	Contours detected: 1	Expected: 2
 
 - Glyph name: fiveeighths	Contours detected: 4	Expected: 5
+
+- Glyph name: imacron	Contours detected: 1	Expected: 2
 
 - Glyph name: ohorn	Contours detected: 3	Expected: 2
 
@@ -2024,6 +2118,8 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 - Glyph name: uni1E1C	Contours detected: 3	Expected: 2
 
 - Glyph name: uni1E1D	Contours detected: 4	Expected: 3
+
+- Glyph name: uni1E39	Contours detected: 2	Expected: 3
 
 - Glyph name: uni1EDB	Contours detected: 4	Expected: 3
 
@@ -2133,7 +2229,7 @@ equal</p>
 <p>Width = 570:
 greaterequal, greater</p>
 <p>Width = 550:
-logicalnot, multiply</p>
+multiply, logicalnot</p>
 <p>Width = 512:
 plusminus</p>
 <p>Width = 519:
@@ -2149,7 +2245,7 @@ notequal
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 550 among a set of 2 math glyphs.
 The following math glyphs have a different width, though:</p>
 <p>Width = 540:
-lessequal, less</p>
+less, lessequal</p>
 <p>Width = 530:
 greaterequal, greater</p>
 <p>Width = 489:
@@ -2279,7 +2375,7 @@ plusminus</p>
 <p>Width = 551:
 multiply</p>
 <p>Width = 513:
-divide, minus</p>
+minus, divide</p>
 <p>Width = 582:
 approxequal</p>
 <p>Width = 602:
