deploy: 270a70f5392edf9191cbc5a4ffd9d39255bf144e

--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -73,15 +73,15 @@
             </tr>
             <tr>
                 <td>0</td>
-                <td>0</td>
-                <td>97</td>
+                <td>8</td>
+                <td>89</td>
                 <td>938</td>
                 <td>49</td>
                 <td>765</td>
             </tr>
             <tr>
                 <td>0%</td>
-                <td>0%</td>
+                <td>1%</td>
                 <td>7%</td>
                 <td>69%</td>
                 <td>4%</td>
@@ -246,14 +246,12 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-SemiBold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>This font file does not have a 'meta' table. [code: lacks-meta-table]</p>
 </span></li></ul></div></details>
-<h2>&lt;Section: Universal&gt; ⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
+<h2>&lt;Section: Universal&gt; 🔥🔥🔥🔥🔥🔥🔥🔥⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
 <h3>Check font contains no unreachable glyphs</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/unreachable_glyphs&gt;</div>
 
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-ExtraLight.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- A7B9
-
-- Aogonek.latnNAV
+<pre><code>- Aogonek.latnNAV
 
 - Eogonek.latnNAV
 
@@ -316,9 +314,7 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-Bold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- A7B9
-
-- Aogonek.latnNAV
+<pre><code>- Aogonek.latnNAV
 
 - Eogonek.latnNAV
 
@@ -381,9 +377,7 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- A7B9
-
-- Aogonek.latnNAV
+<pre><code>- Aogonek.latnNAV
 
 - Eogonek.latnNAV
 
@@ -446,9 +440,7 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-Medium.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- A7B9
-
-- Aogonek.latnNAV
+<pre><code>- Aogonek.latnNAV
 
 - Eogonek.latnNAV
 
@@ -511,9 +503,7 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- A7B9
-
-- Aogonek.latnNAV
+<pre><code>- Aogonek.latnNAV
 
 - Eogonek.latnNAV
 
@@ -576,9 +566,7 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-Light.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- A7B9
-
-- Aogonek.latnNAV
+<pre><code>- Aogonek.latnNAV
 
 - Eogonek.latnNAV
 
@@ -641,9 +629,7 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- A7B9
-
-- Aogonek.latnNAV
+<pre><code>- Aogonek.latnNAV
 
 - Eogonek.latnNAV
 
@@ -706,9 +692,7 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-SemiBold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- A7B9
-
-- Aogonek.latnNAV
+<pre><code>- Aogonek.latnNAV
 
 - Eogonek.latnNAV
 
@@ -2307,21 +2291,29 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <h3>Ensure soft_dotted characters lose their dot when combined with marks that replace the dot.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/soft_dotted&gt;</div>
 
-<details><summary>⚠️ <strong>fonts/ttf/BriemHand-ExtraLight.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHand-ExtraLight.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
+<p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Bold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHand-Bold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
+<p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHand-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
+<p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Medium.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHand-Medium.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
+<p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHand-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
+<p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Light.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHand-Light.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
+<p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHand-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
+<p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>⚠️ <strong>fonts/ttf/BriemHand-SemiBold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>🔥 <strong>fonts/ttf/BriemHand-SemiBold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: i᷆ i᷇ і́</p>
+<p>The dot of soft dotted characters should disappear in other cases, for example: i᷄ i᷅ i᷈ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̛᷈ i̠᷄ i̠᷅ i̠᷆ i̠᷇ i̠᷈ i̤᷄ i̤᷅ i̤᷆ i̤᷇ i̤᷈ i̥᷄ i̥᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
 <h3>Check math signs have the same width.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/math_signs_width&gt;</div>
@@ -2381,7 +2373,7 @@ equal</p>
 <p>Width = 570:
 greater, greaterequal</p>
 <p>Width = 550:
-multiply, logicalnot</p>
+logicalnot, multiply</p>
 <p>Width = 512:
 plusminus</p>
 <p>Width = 519:
