deploy: 0fd970fc8122f018edceaf3f0b5a86382ff2219f

--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -2357,7 +2357,7 @@ plusminus</p>
 <p>Width = 551:
 multiply</p>
 <p>Width = 513:
-minus, divide</p>
+divide, minus</p>
 <p>Width = 582:
 approxequal</p>
 <p>Width = 602:
