--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -73,15 +73,15 @@
             </tr>
             <tr>
                 <td>0</td>
-                <td>8</td>
-                <td>89</td>
+                <td>0</td>
+                <td>97</td>
                 <td>938</td>
                 <td>49</td>
                 <td>765</td>
             </tr>
             <tr>
                 <td>0%</td>
-                <td>1%</td>
+                <td>0%</td>
                 <td>7%</td>
                 <td>69%</td>
                 <td>4%</td>
@@ -246,7 +246,7 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-Bold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>This font file does not have a 'meta' table. [code: lacks-meta-table]</p>
 </span></li></ul></div></details>
-<h2>&lt;Section: Universal&gt; 🔥🔥🔥🔥🔥🔥🔥🔥⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
+<h2>&lt;Section: Universal&gt; ⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
 <h3>Check font contains no unreachable glyphs</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/unreachable_glyphs&gt;</div>
 
@@ -2291,29 +2291,21 @@ FONT_FAMILY_NAME = 'Briem Hand ExtraLight' / SUBFAMILY_NAME = 'Regular'</p>
 <h3>Ensure soft_dotted characters lose their dot when combined with marks that replace the dot.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/soft_dotted&gt;</div>
 
-<details><summary>🔥 <strong>fonts/ttf/BriemHand-ExtraLight.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: і́</p>
-<p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>⚠️ <strong>fonts/ttf/BriemHand-ExtraLight.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ј̀ ј́ ј̂ ј̃ ј̄ ј̆ ј̇ ј̈ ј̉ ј̊ ј̋ ј̌ ј̍ ј̏ ј̐ ј̑ ј̒ ј̓ ј᷄ ј᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHand-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: і́</p>
-<p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ј̀ ј́ ј̂ ј̃ ј̄ ј̆ ј̇ ј̈ ј̉ ј̊ ј̋ ј̌ ј̍ ј̏ ј̐ ј̑ ј̒ ј̓ ј᷄ ј᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHand-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: і́</p>
-<p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ј̀ ј́ ј̂ ј̃ ј̄ ј̆ ј̇ ј̈ ј̉ ј̊ ј̋ ј̌ ј̍ ј̏ ј̐ ј̑ ј̒ ј̓ ј᷄ ј᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHand-Light.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: і́</p>
-<p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Light.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ј̀ ј́ ј̂ ј̃ ј̄ ј̆ ј̇ ј̈ ј̉ ј̊ ј̋ ј̌ ј̍ ј̏ ј̐ ј̑ ј̒ ј̓ ј᷄ ј᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHand-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: і́</p>
-<p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ј̀ ј́ ј̂ ј̃ ј̄ ј̆ ј̇ ј̈ ј̉ ј̊ ј̋ ј̌ ј̍ ј̏ ј̐ ј̑ ј̒ ј̓ ј᷄ ј᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHand-Medium.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: і́</p>
-<p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Medium.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ј̀ ј́ ј̂ ј̃ ј̄ ј̆ ј̇ ј̈ ј̉ ј̊ ј̋ ј̌ ј̍ ј̏ ј̐ ј̑ ј̒ ј̓ ј᷄ ј᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHand-SemiBold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: і́</p>
-<p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>⚠️ <strong>fonts/ttf/BriemHand-SemiBold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ј̀ ј́ ј̂ ј̃ ј̄ ј̆ ј̇ ј̈ ј̉ ј̊ ј̋ ј̌ ј̍ ј̏ ј̐ ј̑ ј̒ ј̓ ј᷄ ј᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/ttf/BriemHand-Bold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: і́</p>
-<p>The dot of soft dotted characters should disappear in other cases, for example: ɉ̀ ɉ́ ɉ̂ ɉ̃ ɉ̄ ɉ̆ ɉ̇ ɉ̈ ɉ̉ ɉ̊ ɉ̋ ɉ̌ ɉ̍ ɉ̏ ɉ̐ ɉ̑ ɉ̒ ɉ̓ ɉ᷄ ɉ᷅ [code: soft-dotted]</p>
+<details><summary>⚠️ <strong>fonts/ttf/BriemHand-Bold.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters should disappear in other cases, for example: ј̀ ј́ ј̂ ј̃ ј̄ ј̆ ј̇ ј̈ ј̉ ј̊ ј̋ ј̌ ј̍ ј̏ ј̐ ј̑ ј̒ ј̓ ј᷄ ј᷅ [code: soft-dotted]</p>
 </span></li></ul></div></details>
 <h3>Check math signs have the same width.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/math_signs_width&gt;</div>
@@ -2325,7 +2317,7 @@ plus</p>
 <p>Width = 551:
 equal</p>
 <p>Width = 533:
-greaterequal, greater</p>
+greater, greaterequal</p>
 <p>Width = 494:
 logicalnot</p>
 <p>Width = 463:
@@ -2349,9 +2341,9 @@ plus</p>
 <p>Width = 560:
 equal</p>
 <p>Width = 570:
-greaterequal, greater</p>
+greater, greaterequal</p>
 <p>Width = 550:
-logicalnot, multiply</p>
+multiply, logicalnot</p>
 <p>Width = 512:
 plusminus</p>
 <p>Width = 519:
@@ -2371,7 +2363,7 @@ plus</p>
 <p>Width = 553:
 equal</p>
 <p>Width = 542:
-greaterequal, greater</p>
+greater, greaterequal</p>
 <p>Width = 507:
 logicalnot</p>
 <p>Width = 474:
@@ -2395,7 +2387,7 @@ plus</p>
 <p>Width = 552:
 equal</p>
 <p>Width = 537:
-greaterequal, greater</p>
+greater, greaterequal</p>
 <p>Width = 499:
 logicalnot</p>
 <p>Width = 468:
@@ -2415,9 +2407,9 @@ notequal
 <details><summary>⚠️ <strong>fonts/ttf/BriemHand-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 550 among a set of 2 math glyphs.
 The following math glyphs have a different width, though:</p>
 <p>Width = 540:
-less, lessequal</p>
+lessequal, less</p>
 <p>Width = 530:
-greaterequal, greater</p>
+greater, greaterequal</p>
 <p>Width = 489:
 logicalnot</p>
 <p>Width = 459:
@@ -2441,7 +2433,7 @@ plus</p>
 <p>Width = 554:
 equal</p>
 <p>Width = 547:
-greaterequal, greater</p>
+greater, greaterequal</p>
 <p>Width = 514:
 logicalnot</p>
 <p>Width = 481:
@@ -2465,7 +2457,7 @@ plus</p>
 <p>Width = 556:
 equal</p>
 <p>Width = 555:
-greaterequal, greater</p>
+greater, greaterequal</p>
 <p>Width = 526:
 logicalnot</p>
 <p>Width = 491:
@@ -2489,7 +2481,7 @@ plus</p>
 <p>Width = 558:
 equal</p>
 <p>Width = 562:
-greaterequal, greater</p>
+greater, greaterequal</p>
 <p>Width = 538:
 logicalnot</p>
 <p>Width = 502:
