deploy: 82af9c882c007e5be46fb589c7df600677eed701

--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -2317,7 +2317,7 @@ plus</p>
 <p>Width = 551:
 equal</p>
 <p>Width = 533:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 494:
 logicalnot</p>
 <p>Width = 463:
@@ -2341,7 +2341,7 @@ plus</p>
 <p>Width = 560:
 equal</p>
 <p>Width = 570:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 550:
 multiply, logicalnot</p>
 <p>Width = 512:
@@ -2363,7 +2363,7 @@ plus</p>
 <p>Width = 553:
 equal</p>
 <p>Width = 542:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 507:
 logicalnot</p>
 <p>Width = 474:
@@ -2387,7 +2387,7 @@ plus</p>
 <p>Width = 552:
 equal</p>
 <p>Width = 537:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 499:
 logicalnot</p>
 <p>Width = 468:
@@ -2409,7 +2409,7 @@ The following math glyphs have a different width, though:</p>
 <p>Width = 540:
 lessequal, less</p>
 <p>Width = 530:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 489:
 logicalnot</p>
 <p>Width = 459:
@@ -2433,7 +2433,7 @@ plus</p>
 <p>Width = 554:
 equal</p>
 <p>Width = 547:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 514:
 logicalnot</p>
 <p>Width = 481:
@@ -2457,7 +2457,7 @@ plus</p>
 <p>Width = 556:
 equal</p>
 <p>Width = 555:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 526:
 logicalnot</p>
 <p>Width = 491:
@@ -2481,7 +2481,7 @@ plus</p>
 <p>Width = 558:
 equal</p>
 <p>Width = 562:
-greater, greaterequal</p>
+greaterequal, greater</p>
 <p>Width = 538:
 logicalnot</p>
 <p>Width = 502:
@@ -2489,7 +2489,7 @@ plusminus</p>
 <p>Width = 551:
 multiply</p>
 <p>Width = 513:
-minus, divide</p>
+divide, minus</p>
 <p>Width = 582:
 approxequal</p>
 <p>Width = 602:
