--- a/DESCRIPTION.en_us.html
+++ b/DESCRIPTION.en_us.html
@@ -1,12 +1,3 @@
 <p>
-    Please add a text describing the font here, 100 chracters or more, but no more than 500 words.
-    See https://googlefonts.github.io/gf-guide/description.html for further reference.
-    Please make sure that HTML characters are properly encoded. ('&' becomes &amp; etc.)
-    If unsure, use https://www.freeformatter.com/html-escape.html for formatting. (Use "Escape HTML").
-</p>
-<p>
-    Could be several paragraphs, also.
-</p>
-<p>
-    To contribute, see <a href="https://github.com/youruseraccount/yourrepository">github.com/youruseraccount/yourrepository</a>.
+Breim Hand is both elegant and utterly accessible. It is direct and sincere without being excessively sentimental. It provides a range of weights, comes with guides and without and with joins and without. Briem Hand is an extended version of Breim Script which was designed by Gunnlaugur SE Briem in 1992 for the experimental teaching of italic handwriting. Updated and extended the new Breim Hand family provides support for nearly all languages in the Latin script.  
 </p>
