--- a/DESCRIPTION.en_us.html
+++ b/DESCRIPTION.en_us.html
@@ -1,5 +1,5 @@
 <p>
-Breim Hand is both elegant and utterly accessible. It is direct and sincere without being excessively sentimental. It provides a range of weights, comes with guides and without and with joins and without. Briem Hand is an extended version of Breim Script which was designed by Gunnlaugur SE Briem in 1992 for the experimental teaching of italic handwriting. 
+Breim Hand is both elegant and utterly accessible. It is direct and sincere without being excessively sentimental. It provides a range of weights, comes with guides and without and with joins and without. Briem Hand is an extended version of Briem Script which was designed by Gunnlaugur SE Briem in 1992 for the experimental teaching of italic handwriting. 
 </p>
 <p>
 Breim Hand includes Latin Vietnamese, Pinyin, and all Western, Central, and South-Eastern European language support, as well as several OpenType features (old-style and tabular figures, superscript and subscript numerals, fractions, stylistic alternates).
